Local NTP: Fix RTL support

Detecting RTL mode depends on embeddedSearch.searchBox.rtl, which was
mistakenly removed in https://codereview.chromium.org/2884293002/.
This adds back that API, so the local NTP can detect RTL-ness again.
It also adds a test to verify that the RTL flag makes it all the way to
the page, plus some plumbing to make the --force-ui-direction flag work
with the NTP.

Bug: 758182
Change-Id: I3e11d5c00a8ff6bf5e6306cbc3142cd2257460b1
Reviewed-on: https://chromium-review.googlesource.com/631680
Commit-Queue: Marc Treib <treib@chromium.org>
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497004}
Former-commit-id: ad33cf94f3251449231decff805b91443635ad87