chrome/renderer/resources/extensions/searchbox_api.js
@@ -14,6 +14,7 @@ if (!chrome.embeddedSearch) {
       // =======================================================================
       //                            Private functions
       // =======================================================================
+      native function GetRightToLeft();
       native function GetSearchRequestParams();
       native function GetSuggestionToPrefetch();
       native function IsFocused();
@@ -25,6 +26,7 @@ if (!chrome.embeddedSearch) {
       // =======================================================================
       //                           Exported functions
       // =======================================================================
+      Object.defineProperty(this, 'rtl', { get: GetRightToLeft });
       this.__defineGetter__('isFocused', IsFocused);
       this.__defineGetter__('isKeyCaptureEnabled', IsKeyCaptureEnabled);
       this.__defineGetter__('suggestion', GetSuggestionToPrefetch);
